<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="20dp"
            android:src="@mipmap/logo_ultracure"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <EditText
            android:background="@drawable/edited_background"
            android:hint="@string/name"
            android:textStyle="bold"
            android:id="@+id/register_fullname"
            android:textSize="20dp"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edited_background"
            android:hint="@string/email"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:id="@+id/register_email"
            android:textSize="20dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edited_background"
            android:hint="@string/password"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:id="@+id/register_password"
            android:textSize="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:background="@drawable/edited_background"
                android:hint="@string/phoneNo"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:id="@+id/register_phone"
                android:textSize="20dp"
                android:padding="10dp"
                android:inputType="number"
                android:layout_weight="5"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/capsule"
                android:id="@+id/generate_otp"
                android:text="Recive O.T.P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <EditText
            android:background="@drawable/edited_background"
            android:hint="@string/otp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:id="@+id/register_otp"
            android:textSize="20dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register"
            android:text="@string/signUp"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/design_btn"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/google_signIn"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:elevation="8dp"
            android:drawableStart="@drawable/ic_google_logo"
            android:drawableLeft="@drawable/ic_google_logo"
            android:text="Sign In with Google"
            android:textColor="#fff" />

        <TextView
            android:textSize="20dp"
            android:id="@+id/txt_login"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/allreadyhaveanaccountlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>